--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Welcome to My GitHub Website</h1>
-                <p>A showcase of my projects and skills</p>
+                <h1>තාක්ෂණවේදය විෂය ධාරාව වෙත සාදරයෙන් පිලිගනිමු.</h1>
                 <a href="#projects" class="cta-button">View My Work</a>
             </div>
         </section>
